[metadata]
name = kafka-ease
description = Automating the creation of topics and ACLs is a common task for Kafka administrators. This repository contains a set of utilities to automate these tasks.
long_description_content_type = text/markdown
long_description = file: README.md
url = https://rdomenzain.github.io/kafka-ease/
author = Ricardo Domenzain
author_email = richydomenzain@gmail.com
maintainer = Ricardo Domenzain
maintainer_email = richydomenzain@gmail.com
keywords = kafka, kafka-topics, kafka-acls, kafka-administration, kafka-automation
license = GPLv3
license_file = LICENSE
project_urls =
    Bug Tracker = https://github.com/rdomenzain/kafka-ease/issues
    Changelog = https://github.com/rdomenzain/kafka-ease/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Intended Audience :: Developers

[options]
package_dir =
    kafka_ease = src
packages =
    kafka_ease
python_requires = >=3.8
install_requires = file: requirements.txt
include_package_data = true
[options.entry_points]
console_scripts =
    kafka-ease = kafka_ease.main:cli
